feat: add handle vote & change res of idea
